fix(bottom): add z-index higher to visit website button

--- a/app/assets/stylesheets/base/award.sass
+++ b/app/assets/stylesheets/base/award.sass
@@ -442,6 +442,7 @@
   height: 250px
   bottom: -90px
   right: 290px
+  z-index: 2
   background: url("/assets/award/visit-website.png") no-repeat
   &:hover
     background: url("/assets/award/visit-website-hover.png") no-repeat
